[package]
name = "ryde"
version = "0.1.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/swlkr/ryde"
repository = "https://github.com/swlkr/ryde"
keywords = ["ryde", "web", "ssr", "framework", "hypermedia"]
description = "a single person, single file web development library"

[workspace]
members = [
  "crates/css",
  "crates/css_macros",
  "crates/db",
  "crates/db_macros",
  "crates/html",
  "crates/router",
  "crates/router_macros",
  "crates/static_files",
  "crates/static_files_macros",
]

[workspace.dependencies]
ryde_css = { path = "crates/css", version = "0.1.0" }
ryde_db = { path = "crates/db", version = "0.1.1" }
ryde_html = { path = "crates/html", version = "0.2.0" }
ryde_router = { path = "crates/router", version = "0.1.0" }
ryde_static_files = { path = "crates/static_files", version = "0.1.0" }

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
axum-extra = { version = "0.9.2", features = ["cookie", "typed-header"] }
ryde_css = { workspace = true }
ryde_db = { workspace = true }
ryde_html = { workspace = true }
ryde_router = { workspace = true }
ryde_static_files = { workspace = true }

[[example]]
name = "simple"

[[example]]
name = "html"

[[example]]
name = "router"

[[example]]
name = "static_files"

[[example]]
name = "db"
