[package]
name = "ryde"
version = "0.3.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/swlkr/ryde"
repository = "https://github.com/swlkr/ryde"
keywords = ["ryde", "web", "ssr", "framework", "hypermedia"]
description = "a single person, single file web framework"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header", "multipart"] }
itoa = "1.0"
http-body-util = "0.1"
rusqlite = "0.31"
ryde_macros = { path = "ryde_macros", version = "0.1.0" }
ryu = "1.0"
seq-macro = "0.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-rusqlite = { git = "https://github.com/programatik29/tokio-rusqlite.git", version = "0.5" }
tower = "0.4"

[[example]]
name = "simple"

[[example]]
name = "html"

[[example]]
name = "router"

[[example]]
name = "static_files"

[[example]]
name = "db"

[[example]]
name = "protected"
