[package]
name = "ryde_macros"
version = "0.2.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/swlkr/ryde"
repository = "https://github.com/swlkr/ryde"
keywords = ["ryde", "macros"]
description = "proc macros for ryde"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
sqlparser = { version = "0.43" }
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
rstml = { version = "0.11" }
