[package]
name = "ryde_css_macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/swlkr/ryde_css_macros"
repository = "https://github.com/swlkr/ryde_css_macros"
keywords = ["ryde", "css_macros"]
description = "Macros for the ryde_css crate"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro-error = "1"
