[package]
name = "ryde_db_macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/swlkr/ryde"
repository = "https://github.com/swlkr/ryde"
keywords = ["ryde", "db_macros"]
description = "db macros for ryde"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro-error = "1"
rusqlite = { version = "0.31.0" }
sqlparser = { version = "0.43.1" }

