[package]
name = "enum_router_macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/swlkr/enum_router"
repository = "https://github.com/swlkr/enum_router"
keywords = ["enum_router_macros"]
description = "Macros for the enum_router crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro-error = "1"
