[package]
name = "router"
version = "0.1.0"
edition = "2021"

[dependencies]
router_macros = { path = "../router_macros", version = "0.1.0" }
axum-core = { version = "0.3" }
html = { path = "../html" }

[dev-dependencies]
serde = { version = "1.0.193", features = ["serde_derive", "derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4.13" }
axum = { version = "0.6" }
