[package]
name = "router_macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/swlkr/ryde"
repository = "https://github.com/swlkr/ryde"
keywords = ["router_macros"]
description = "Macros for the router crate in ryde"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro-error = "1"
static_files = { path = "../static_files" }
