[package]
name = "ryde_router_macros"
version = "0.1.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/swlkr/ryde"
repository = "https://github.com/swlkr/ryde"
keywords = ["ryde", "router_macros"]
description = "Macros for the router crate in ryde"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
proc-macro-error = "1"
